--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/childserve/job/oZ1fbfwa'>ChildServe Careers - Speech Language Pathologist - Full Time</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/childserve/job/oZ1fbfwa'>ChildServe Careers - Speech Language Pathologist - Full Time</a></h5> 
 <p><span class="badge badge-light">Johnston, Iowa</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -207,7 +207,7 @@
 <p>1 day ago ... Speech Language Pathologist. Schenectady Center is actively seeking Speech 
 Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/angelsofcare/job/oYYpbfwg'>Angels of Care Pediatric Home Health Careers - Speech Language Pathologist (SLP/CFY) - Pediatric Home Health</a></h5> 
+<h5><a href='https://jobs.jobvite.com/angelsofcare/job/oYYpbfwg'>Angels of Care Pediatric Home Health Careers - Speech Language Pathologist (SLP/CFY) - Pediatric Home Health</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -274,7 +274,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">Cape Girardeau, Missouri</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999687135311-infant-toddler-developmental-therapist-itds'>Hearing and Speech Center of Florida Infant Toddler Developmental Therapist-ITDS | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999687135311-infant-toddler-developmental-therapist-itds'>Hearing and Speech Center of Florida Infant Toddler Developmental Therapist-ITDS | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -309,7 +309,7 @@ physician practices, and services. Expanding across Virginia, West Virginia, and
 <p>3 days ago ... Speech Language Pathologist - Speech Therapist - SLP - ST JOB SUMMARY: A 
 Speech Language Pathologist (SLP) administers speech therapy to patients on?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nmhc.referrals.selectminds.com/jobs/speech-therapist-orthopedic-rehab-acute-inpatient-casual-weekends-32889'>Speech Therapist - Orthopedic Rehab Acute Inpatient, Casual, Weekends - Northwestern Medicine Careers</a></h5> 
+<h5><a href='https://nmhc.referrals.selectminds.com/jobs/speech-therapist-orthopedic-rehab-acute-inpatient-casual-weekends-32889'>Speech Therapist - Orthopedic Rehab Acute Inpatient, Casual, Weekends - Northwestern Medicine Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -333,7 +333,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://new-story-1.workable.com/j/B3392A3FDB'>New Story - Jobs: Speech Language Pathologist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://new-story-1.workable.com/j/B3392A3FDB'>New Story - Jobs: Speech Language Pathologist - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -349,7 +349,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Canton, GA</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4474577002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4474577002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -365,7 +365,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4476793002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4476793002'>Job Application for Speech Language Pathologist, SLP - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Newark, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -409,7 +409,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://access-physical-therapy-wellness.breezy.hr/p/6c9a7b152dc1-speech-language-pathologist'>Speech Language Pathologist at Access Physical Therapy & Wellness</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://access-physical-therapy-wellness.breezy.hr/p/6c9a7b152dc1-speech-language-pathologist'>Speech Language Pathologist at Access Physical Therapy & Wellness</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -429,7 +429,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Reading, PA Reading, PA</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/teleteachers/jobs/4468345002'>Job Application for We are always looking for GREAT Speech-Language Pathologists!  at TeleTeachers</a></h5> 
+<h5><a href='https://boards.greenhouse.io/teleteachers/jobs/4468345002'>Job Application for We are always looking for GREAT Speech-Language Pathologists!  at TeleTeachers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
