--- a/data-engineer.html
+++ b/data-engineer.html
@@ -181,7 +181,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.vidiq.com/o/data-engineer?utm_content=buffer0f226&utm_medium=social&utm_source=twitter&utm_campaign=buffer'>
+<h5><a href='https://careers.vidiq.com/o/data-engineer?utm_content=buffer0f226&utm_medium=social&utm_source=twitter&utm_campaign=buffer'>
       Data Engineer - vidIQ
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -269,7 +269,7 @@ systems,?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/litify/jobs/1933087'>Job Application for Data Engineer (Salesforce) at Litify</a></h5> 
+<h5><a href='https://boards.greenhouse.io/litify/jobs/1933087'>Job Application for Data Engineer (Salesforce) at Litify</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -324,7 +324,7 @@ analysts et data scientists. Sous la supervision du Head of Data, votre r?le est
 <p>Oct 15, 2019 ... TrueData is a leading mobile data platform that works with app publishers who 
 generate mobile data and the apps, agencies, brands, and ad tech companies?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/'>Data Engineer - 10Pearls</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/'>Data Engineer - 10Pearls</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 18, 2019 ... We are looking for a ?Data Engineer?. Ideal candidate should have a Bachelor's 
 degree in Computer Science with 2 ? 3 years of programming experience on?...</p>
@@ -358,7 +358,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://levelset.applytojob.com/apply/ojggr61shU/Senior-Software-Data-Engineer'>Senior Software Data Engineer - Levelset - Career Page</a></h5> 
+<h5><a href='http://levelset.applytojob.com/apply/ojggr61shU/Senior-Software-Data-Engineer'>Senior Software Data Engineer - Levelset - Career Page</a></h5> 
 <p><span class="badge badge-light">Cairo, Egypt</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -402,7 +402,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/altisource/jobs/1925338'>Job Application for 1713323 - Big Data Engineer at Altisource</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1925338'>Job Application for 1713323 - Big Data Engineer at Altisource</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
