--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,11 +71,15 @@
   
 	
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/PopHealthCareLLC/743999698666018-data-reporting-analyst-operations'>PopHealthCare, LLC Data Reporting Analyst - Operations | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698668014-sr-analyst-iii-statistical-programming'>Biogen Sr Analyst III, Statistical Programming | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Cambridge, MA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PopHealthCareLLC/743999698666018-data-reporting-analyst-operations'>PopHealthCare, LLC Data Reporting Analyst - Operations | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999698653332-analyste-programmeur-de-donnees-data-programmer-analyst'>Gameloft Analyste-programmeur de donn?es - Data Programmer-Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999698653332-analyste-programmeur-de-donnees-data-programmer-analyst'>Gameloft Analyste-programmeur de donn?es - Data Programmer-Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -91,7 +95,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/workmarket/jobs/1925798?gh_jid=1925798&gh_src=ac0da28a1'>Job Application for Senior Data Analyst at WorkMarket</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/workmarket/jobs/1925798?gh_jid=1925798&gh_src=ac0da28a1'>Job Application for Senior Data Analyst at WorkMarket</a></h5> 
 <p><span class="badge badge-light">Toronto, ON  Toronto, ON</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -134,7 +138,7 @@
 <p><span class="badge badge-light">Scottsdale, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/pg5fcyjw9xtwomprg4pcypioiy'>Data Analyst | Manifest Solutions</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/pg5fcyjw9xtwomprg4pcypioiy'>Data Analyst | Manifest Solutions</a></h5> 
 <p><span class="badge badge-light">Columbus, OH  Columbus</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -158,7 +162,7 @@
 <p><span class="badge badge-light">Oxford</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/yelp/2ee6b838-409e-4db8-a6ee-df72f2984e68'>Yelp - Data Science Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/yelp/2ee6b838-409e-4db8-a6ee-df72f2984e68'>Yelp - Data Science Analyst</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -212,7 +216,7 @@
 <p><span class="badge badge-light">Washington, DCWashington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://grofers.recruiterbox.com/jobs/fk03d44'>
+<h5><a href='http://grofers.recruiterbox.com/jobs/fk03d44'>
     Data Analyst  at Grofers
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -238,7 +242,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-26873'>Data Analyst - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-26873'>Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -246,7 +250,7 @@
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Data-Analyst'>Data Analyst - Cover - Career Page</a></h5> 
+<h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Data-Analyst'>Data Analyst - Cover - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -298,7 +302,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NY</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -330,7 +334,7 @@
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lewisham.referrals.selectminds.com/jobs/trainee-data-analyst-995'>Trainee Data Analyst - Lewisham Jobs Careers</a></h5> 
+<h5><a href='https://lewisham.referrals.selectminds.com/jobs/trainee-data-analyst-995'>Trainee Data Analyst - Lewisham Jobs Careers</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -350,11 +354,11 @@
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mealpal/jobs/1936170'>Job Application for Data Analyst at MealPal</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mealpal/jobs/1936170'>Job Application for Data Analyst at MealPal</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ahsw.referrals.selectminds.com/jobs/clinical-data-analyst-19228'>Clinical Data Analyst - Adventist Health Careers</a></h5> 
+<h5><a href='https://ahsw.referrals.selectminds.com/jobs/clinical-data-analyst-19228'>Clinical Data Analyst - Adventist Health Careers</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -362,7 +366,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -386,7 +390,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -434,7 +438,7 @@
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cityofwindsor.applytojob.com/apply/WaqfxBiUha/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
+<h5><a href='http://cityofwindsor.applytojob.com/apply/WaqfxBiUha/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -446,7 +450,7 @@
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -482,12 +486,6 @@
 <hr/>
 <h5><a href='https://boards.greenhouse.io/dv01/jobs/4498658002'>Job Application for Data Analyst, Capital Markets  at dv01</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://agiledss1.recruitee.com/l/en/o/data-analyst-big-data-and-bi'>
-      Data Analyst (Big Data and BI) - agileDSS
-    </a></h5> 
-<p><span class="badge badge-light">Montr?al, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
