--- a/data-architect.html
+++ b/data-architect.html
@@ -89,7 +89,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-architect-24139-va-dlOV8W-8ar6B_yaKiznY58'>Data Architect-24139-VA #0688 job at Radiant Digital in Ashburn, VA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-architect-24139-va-dlOV8W-8ar6B_yaKiznY58'>Data Architect-24139-VA #0688 job at Radiant Digital in Ashburn, VA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light">Mechelen,BE Mechelen,BE  Mechelen, Belgium  Mechelen,BE  Mechelen,BE  France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698452272-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698452272-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -181,7 +181,7 @@ dig?...</p>
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhvaVfwB&k=Job&j=oeEeafw0&__jvst=Employee+Referral&__jvsd=sfdx1hwM&__jvsc=Twitter&bid=nwbwlMwP'>Accudata Systems, Inc. Careers - Risk &amp; Compliance Solutions Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhvaVfwB&k=Job&j=oeEeafw0&__jvst=Employee+Referral&__jvsd=sfdx1hwM&__jvsc=Twitter&bid=nwbwlMwP'>Accudata Systems, Inc. Careers - Risk &amp; Compliance Solutions Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -285,11 +285,11 @@ dig?...</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppg.referrals.selectminds.com/jobs/data-architect-lead-5971'>Data Architect, Lead - PPG Careers Careers</a></h5> 
+<h5><a href='https://ppg.referrals.selectminds.com/jobs/data-architect-lead-5971'>Data Architect, Lead - PPG Careers Careers</a></h5> 
 <p><span class="badge badge-light">Pittsburgh United States</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51/apply'>Ridango AS - Data Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51/apply'>Ridango AS - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Data Architect. Tallinn. Engineering ? Development Leads. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -324,7 +324,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://geico.referrals.selectminds.com/jobs/junior-data-architect-10713'>Junior Data Architect - GEICO Careers</a></h5> 
+<h5><a href='https://geico.referrals.selectminds.com/jobs/junior-data-architect-10713'>Junior Data Architect - GEICO Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -376,11 +376,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/omambfwN'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/omambfwN'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/NFOLKSLLC/743999689420714-big-data-solutions-architect-and-client-stater-bros-and-rate-130-hr-and-location-san-berdanhino-ca-and-duration-6-months'>NFOLKS LLC Big Data Solutions Architect and Client: Stater Bros and Rate: $130/hr and Location: San Berdanhino, CA and Duration: 6+ months | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NFOLKSLLC/743999689420714-big-data-solutions-architect-and-client-stater-bros-and-rate-130-hr-and-location-san-berdanhino-ca-and-duration-6-months'>NFOLKS LLC Big Data Solutions Architect and Client: Stater Bros and Rate: $130/hr and Location: San Berdanhino, CA and Duration: 6+ months | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -404,7 +404,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiger-analytics.workable.com/jobs/1144280'>Big Data Architect - Apply online - Tiger Analytics - Jobs</a></h5> 
+<h5><a href='https://tiger-analytics.workable.com/jobs/1144280'>Big Data Architect - Apply online - Tiger Analytics - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... Our consultants bring deep expertise in Data Science, Machine Learning and AI. 
 We are the trusted analytics partner for several Fortune 100 companies,?...</p>
@@ -422,7 +422,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Canberra  Canberra</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://www.thetagit.com/careers/data-architect-analyst-1208/'>Data Architect/Analyst 1208 - The Talent Advantage Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.thetagit.com/careers/data-architect-analyst-1208/'>Data Architect/Analyst 1208 - The Talent Advantage Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -462,7 +462,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=op9iafwK&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nHpn8MwS'>Quotient Technology Inc. Careers - Data Engineer- Data Platform &amp; Architecture</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=op9iafwK&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nHpn8MwS'>Quotient Technology Inc. Careers - Data Engineer- Data Platform &amp; Architecture</a></h5> 
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
